--- a/css/style.css
+++ b/css/style.css
@@ -1,16 +1,13 @@
 @import url('https://fonts.googleapis.com/css?family=Pacifico&display=swap');
-* {
-  margin: 0;
-  padding: 0;
-  list-style: none;
-}
 body{
   font-family: 'Josefin Sans', sans-serif;
   background-color: #333;
 }
 .displaynone{
-  position: fixed;
-  left: -100%;
+  display: none;
+}
+.fixedOut{
+  position: absolute;
 }
 ::-webkit-scrollbar {
   width: 5px;
@@ -94,24 +91,24 @@ body{
   height: 15px;
   transition: 0.25s;
 }
-.active .left_dot::before, .active .left_dot::after, .active .right_dot::before, .active .right_dot::after{
+.navbar .active .left_dot::before, .active .left_dot::after, .active .right_dot::before, .active .right_dot::after{
   width: 10px;
   height: 10px;
 }
-.active .left_dot::before{
+.navbar .active .left_dot::before{
   opacity: 0.8;
   animation: moveLeftTop 1.25s forwards;
   transform-origin: left bottom;
 }
-.active .left_dot::after{
+.navbar .active .left_dot::after{
   opacity: 0.6;
   animation: moveRightTop 0.5s forwards;
 }
-.active .right_dot::before{
+.navbar .active .right_dot::before{
   opacity: 0.4;
   animation: moveRightBottom 0.75s forwards;
 }
-.active .right_dot::after{
+.navbar .active .right_dot::after{
   opacity: 0.2;
   animation: moveLeftBottom 1s forwards;
 }
@@ -147,7 +144,7 @@ body{
 .header_title{
   font-weight: 900;
   text-align: center;
-  font-size: 160px;
+  font-size: 10vw;
   height: 100%;
   width: 100%;
   display: flex;
