--- a/css/style.css
+++ b/css/style.css
@@ -117,7 +117,7 @@ body{
 #topButton{
   position: fixed;
   bottom: -250px;
-  right: 50px;
+  right: 2vw;
   width: 75px;
   height: 75px;
   /* background-color: #fff; */
@@ -129,7 +129,7 @@ body{
   vertical-align: middle;
 }
 #topButton.active{
-  bottom: 50px;
+  bottom: 3vh;
 }
 /* top */
 .header{
@@ -183,12 +183,12 @@ body{
 /* 第四層 */
 .story{
   background: url('../img/story.jpg') no-repeat center center;
-  background-size: 100% 100%;
+  /* background-size: 100% 100%; */
 }
 /* 第五層 */
 .end{
   background: url('../img/end.jpg') no-repeat center center;
-  background-size: 100% 100%;
+  /* background-size: 100% 100%; */
 }
 .end .container{
   display: flex;
@@ -201,7 +201,7 @@ body{
 .end .text_box a{
   color: #eee;
   font-weight: 900;
-  font-size: 240px;
+  font-size: 12vw;
   text-decoration: none;
   transition: 0.5s;
 }
@@ -211,10 +211,10 @@ body{
 .end .text_box a::after{
   content: '';
   position: absolute;
-  width: 100px;
-  height: 100px;
-  right: -50px;
-  top: -50px;
+  width: 6vw;
+  height: 6vw;
+  right: -3vw;
+  top: -3vw;
   border: 5px dotted #ccc;
   border-radius: 50%;
   transition: 1s;
